@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    Improve the error message when failing to build with *>> or ?>>
     Introduce a portable flag, to switch to portable FileTime ops
     Improve the error message when failing to build a file
     Ensure errors raised bubble up quickly
